--- a/zeppelin-web/src/app/notebook/notebook-actionBar.html
+++ b/zeppelin-web/src/app/notebook/notebook-actionBar.html
@@ -282,7 +282,7 @@ limitations under the License.
                 </p>
               </div>
               <div>
-                <span>- auto-restart interpreter on cron execution </span>
+                <span>- After execution stop the interpreter </span>
                 <input type="checkbox"
                        ng-model="note.config.releaseresource"
                        ng-click="setReleaseResource(note.config.releaseresource)"/>
