--- a/zeppelin-web/src/assets/styles/looknfeel/simple.css
+++ b/zeppelin-web/src/assets/styles/looknfeel/simple.css
@@ -89,7 +89,7 @@ body {
   visibility: hidden;
 }
 
-.noteAction .form-control-static2 > span {
+.noteAction .form-control-title > span {
   visibility: visible;
 }
 
